Make nsCSSDataBlock::Clone work correctly.  Fix uninitialized variable warning.  b=208872  r+sr=bzbarsky